# dataproc-handson

./: README.md  pyproject.toml  wordcount.py
