[project]
name = "word-count-job"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zakuro0w0", email = "tatatake0w0@gmail.com" }
]
dependencies = ["pyspark"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/word_count_job"]
